fix: fix nav-list alignment for mobile, change font-size in code for mobile

--- a/style.css
+++ b/style.css
@@ -45,6 +45,7 @@ body {
   flex: wrap;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
   max-width: 1440px;
   margin: 0 auto;
   padding: 40px;
@@ -52,10 +53,11 @@ body {
 }
 
 .nav-list {
-  list-style: none;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  padding: 0;
+  list-style: none;
 }
 
 .nav-link {
@@ -264,6 +266,10 @@ body {
 
   .section-left-column {
     border-right: none;
+  }
+
+  .code-container {
+    font-size: 15px;
   }
 
   .text-container,
